fix text align

--- a/WraDashboard/css/style.css
+++ b/WraDashboard/css/style.css
@@ -21,6 +21,7 @@ h6 {
 
 body.demo {
     overflow-y: hidden;
+    text-align: left;
 }
 
 .demo {
